--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -100,8 +100,8 @@ Main page styles
 .hipster {
     display: inline-block;
     width: 347px;
-    height: 497px;
-    background: url("../images/hipster.png") no-repeat center top;
+    height: 267px;
+    background: url("../images/logo.png") no-repeat center center;
     background-size: contain;
 }
 
@@ -114,7 +114,7 @@ only screen and (        min-device-pixel-ratio: 2),
 only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) {
     .hipster {
-        background: url("../images/hipster2x.png") no-repeat center top;
+        background: url("../images/logo.png") no-repeat center center;
         background-size: contain;
     }
 }
