--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -41,7 +41,7 @@
                         <li ui-sref-active="active">
                             <a ui-sref="product" ng-click="vm.collapseNavbar()">
                                 <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
-                                <span >Product</span>
+                                <span >Produkty</span>
                             </a>
                         </li>
                         <li ui-sref-active="active">
