--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -302,13 +302,14 @@ entity detail page css
 
 @media screen and (min-width: 768px) {
     .dl-horizontal.jh-entity-details > dt {
-        margin-bottom: 15px;
+        margin-bottom: 0px;
     }
 
     .dl-horizontal.jh-entity-details > dd {
         border-bottom: 1px solid #eee;
         padding-left: 180px;
-        margin-left: 0;
+        padding-bottom: 15px;
+        margin-left: 0px;
     }
 }
 
