refactor of init reset password process

--- a/src/main/webapp/app/components/login/login.html
+++ b/src/main/webapp/app/components/login/login.html
@@ -34,10 +34,7 @@
             </form>
             <p></p>
             <div class="alert alert-warning">
-                Nie pamiętasz swojego hasła? <a class="alert-link" href="" ng-click="vm.requestResetPassword()">Przypomnij hasło</a>
-            </div>
-            <div class="alert alert-warning">
-                Nie masz jeszcze konta? <a class="alert-link" href="" ng-click="vm.register()">Zarejestruj się</a>
+                Nie pamiętasz swojego hasła? <a class="alert-link" href="" ng-click="vm.requestResetPassword()">Zresetuj hasło</a>
             </div>
         </div>
     </div>
