--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -333,3 +333,11 @@ ui bootstrap tweaks
 
 
 /* jhipster-needle-css-add-main JHipster will add new css style */
+
+/* ==========================================================================
+my css styles
+========================================================================== */
+
+label + div[class=btn-group] {
+    width: 100%;
+}
